--- a/PointStar/Base.lproj/Main.storyboard
+++ b/PointStar/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,10 +15,57 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VBf-cT-C3C">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ynT-9E-Cdj">
+                                        <rect key="frame" x="80" y="200" width="440" height="280"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.93725490199999995" green="0.28235294119999998" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="ynT-9E-Cdj" secondAttribute="bottom" constant="100" id="AgC-l4-Zgt"/>
+                                    <constraint firstItem="ynT-9E-Cdj" firstAttribute="leading" secondItem="VBf-cT-C3C" secondAttribute="leading" constant="80" id="DNx-fG-vo2"/>
+                                    <constraint firstAttribute="trailing" secondItem="ynT-9E-Cdj" secondAttribute="trailing" constant="80" id="jox-Ud-aro"/>
+                                    <constraint firstItem="ynT-9E-Cdj" firstAttribute="top" secondItem="VBf-cT-C3C" secondAttribute="top" constant="200" id="qUm-QG-BOI"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VBf-cT-C3C" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="4jC-Ig-rxA"/>
+                            <constraint firstAttribute="trailing" secondItem="VBf-cT-C3C" secondAttribute="trailing" id="RKf-1J-5J7"/>
+                            <constraint firstAttribute="bottom" secondItem="VBf-cT-C3C" secondAttribute="bottom" id="yry-VW-gDA"/>
+                            <constraint firstItem="VBf-cT-C3C" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="zzE-lc-95j"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myView" destination="VBf-cT-C3C" id="hIq-9v-BGU"/>
+                        <outlet property="score" destination="ynT-9E-Cdj" id="D9X-im-Naq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="4Yp-eg-qxk">
+            <objects>
+                <viewController id="naC-od-dLZ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GdG-da-9Y4"/>
+                        <viewControllerLayoutGuide type="bottom" id="Msb-qE-Vwh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JId-GQ-ZZL">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="roV-Sf-EVl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
